--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,  h2, h3, h4 , h5, h6 {
+h1, h2, h3, h4 , h5, h6 {
   font-family: 'Bodoni Moda', serif;
   margin: 0;
+}
+
+p{
+  font-family:'Bodoni Moda', serif;
+  font-size: 50px;
+  padding: var(--gap-sm);
 }
 
 a {
